refactor: unify projects