@@ -8,24 +8,36 @@ repositories {
     mavenCentral()
 }
 
-sourceCompatibility=11
-targetCompatibility=11
+var testcontainersVersion = "1.20.3"
+var slf4jVersion = "2.0.7"
 
 dependencies {
     implementation(project(':sdk-java'))
     implementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
     implementation 'org.awaitility:awaitility:4.2.0'
-    implementation 'org.slf4j:slf4j-api:2.0.7'
+    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+    api "org.testcontainers:kafka:${testcontainersVersion}"
+    api "org.testcontainers:testcontainers:${testcontainersVersion}"
+
+    testImplementation "org.slf4j:slf4j-simple:${slf4jVersion}"
+    testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
 }
 
 java {
+    sourceCompatibility=11
+    targetCompatibility=11
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
+    testLogging {
+        events 'passed', 'skipped', 'failed'
+        exceptionFormat = 'full'
+    }
+    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-opens', 'java.base/java.util=ALL-UNNAMED']
 }
 
 spotless {
